Imported from https://T-e-j-k-u-m-a-r@github.com/T-e-j-k-u-m-a-r/Katalon-Studio-API-.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = This is an demonstration project for Katalon-Studio
+[access "refs/*"]
+	owner = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	label-Verified = -1..+1 group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	push = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	read = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	rebase = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	removeReviewer = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	submit = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+[access "refs/heads/*"]
+	create = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	push = +force group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	pushMerge = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	read = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+[access "refs/tags/*"]
+	push = group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
+	push = +force group user/Tejkumar Kempaiah (T-e-j-k-u-m-a-r)
